# gdk-pixbuf-loader-apng

./: .clang-format  CMakeLists.txt  README.rst
share/mime-info/: apng.xml
src/: io-apng-animation.c  io-apng-animation.h  io-apng.c  io-apng.h
